ROX-5212: Creating a Tooltip Card Component (#6132)
* ROX-5212: Creating a Tooltip Card Component

* fixes

* fix padding in tooltip

* fixes

* fixes

* fixes

* fixes

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1287,7 +1287,7 @@ h6 {
 @import '~tippy.js/dist/tippy.css';
 
 .rox-tooltip-overlay {
-    @apply p-2 text-sm text-center text-base-600 z-10 bg-tertiary-200 rounded border border-tertiary-400;
+    @apply text-sm text-center text-base-600 z-10 bg-tertiary-200 rounded border border-tertiary-400;
 }
 
 .tippy-tooltip {
