Add AWS Account Number to AWS SecHub integration form (#6339)

--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -321,6 +321,10 @@ h6 {
     @apply p-0 !important;
 }
 
+.react-select__placeholder {
+    color: var(--base-500) !important;
+}
+
 .severity-tile {
     background: hsla(0, 0%, 100%, 0.19);
 }
