--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -48,7 +48,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "~@stackrox/ui-components/lib/ui-components.css";
+@import '~@stackrox/ui-components/lib/ui-components.css';
 
 .sticky {
     position: sticky !important;
@@ -815,6 +815,101 @@ h6 {
 }
 
 .redoc-wrap {
+    /* TODO: discover a way to export CSS vars from our tailwind-config package
+       for now, repeating light theme colors here,
+       because Redoc components unreadable with StackRox dark theme,
+       their styles need to be tuned
+    */
+
+    --base-100: hsla(225, 0%, 100%, 1);
+    --base-200: hsla(225, 45%, 98%, 1);
+    --base-300: hsla(225, 43%, 94%, 1);
+    --base-400: hsla(225, 44%, 87%, 1);
+    --base-500: hsla(225, 17%, 63%, 1);
+    --base-600: hsla(225, 14%, 43%, 1);
+    --base-700: hsla(225, 18%, 32%, 1);
+    --base-800: hsla(225, 24%, 22%, 1);
+    --base-900: hsla(225, 27%, 16%, 1);
+
+    --primary-100: hsla(225, 100%, 99%, 1);
+    --primary-200: hsla(225, 100%, 96%, 1);
+    --primary-300: hsla(225, 80%, 92%, 1);
+    --primary-400: hsla(225, 68%, 78%, 1);
+    --primary-500: hsla(225, 65%, 68%, 1);
+    --primary-600: hsla(225, 90%, 67%, 1);
+    --primary-700: hsla(225, 51%, 52%, 1);
+    --primary-800: hsla(225, 37%, 36%, 1);
+    --primary-900: hsla(225, 28%, 21%, 1);
+
+    --secondary-100: hsla(257, 45%, 98%, 1);
+    --secondary-200: hsla(257, 100%, 96%, 1);
+    --secondary-300: hsla(257, 81%, 90%, 1);
+    --secondary-400: hsla(257, 68%, 78%, 1);
+    --secondary-500: hsla(257, 66%, 68%, 1);
+    --secondary-600: hsla(257, 100%, 67%, 1);
+    --secondary-700: hsla(257, 50%, 52%, 1);
+    --secondary-800: hsla(257, 37%, 36%, 1);
+    --secondary-900: hsla(257, 28%, 21%, 1);
+
+    --tertiary-100: hsla(210, 45%, 98%, 1);
+    --tertiary-200: hsla(210, 100%, 96%, 1);
+    --tertiary-300: hsla(210, 81%, 90%, 1);
+    --tertiary-400: hsla(210, 68%, 78%, 1);
+    --tertiary-500: hsla(210, 66%, 68%, 1);
+    --tertiary-600: hsla(210, 93%, 58%, 1);
+    --tertiary-700: hsla(210, 47%, 48%, 1);
+    --tertiary-800: hsla(210, 37%, 36%, 1);
+    --tertiary-900: hsla(210, 28%, 21%, 1);
+
+    --accent-100: hsla(293, 45%, 98%, 1);
+    --accent-200: hsla(293, 100%, 96%, 1);
+    --accent-300: hsla(293, 80%, 90%, 1);
+    --accent-400: hsla(293, 64%, 80%, 1);
+    --accent-500: hsla(293, 62%, 71%, 1);
+    --accent-600: hsla(293, 68%, 62%, 1);
+    --accent-700: hsla(293, 34%, 50%, 1);
+    --accent-800: hsla(293, 34%, 37%, 1);
+    --accent-900: hsla(293, 28%, 21%, 1);
+
+    --success-100: hsla(155, 45%, 98%, 1);
+    --success-200: hsla(155, 100%, 96%, 1);
+    --success-300: hsla(155, 81%, 90%, 1);
+    --success-400: hsla(155, 68%, 78%, 1);
+    --success-500: hsla(155, 66%, 68%, 1);
+    --success-600: hsla(155, 52%, 46%, 1);
+    --success-700: hsla(155, 62%, 33%, 1);
+    --success-800: hsla(155, 37%, 31%, 1);
+    --success-900: hsla(155, 28%, 21%, 1);
+
+    --warning-100: hsla(39, 45%, 98%, 1);
+    --warning-200: hsla(39, 100%, 96%, 1);
+    --warning-300: hsla(39, 80%, 90%, 1);
+    --warning-400: hsla(39, 64%, 80%, 1);
+    --warning-500: hsla(39, 62%, 71%, 1);
+    --warning-600: hsla(39, 100%, 66%, 1);
+    --warning-700: hsla(39, 38%, 52%, 1);
+    --warning-800: hsla(39, 34%, 37%, 1);
+    --warning-900: hsla(39, 28%, 21%, 1);
+
+    --caution-100: hsla(16, 45%, 98%, 1);
+    --caution-200: hsla(16, 100%, 96%, 1);
+    --caution-300: hsla(16, 81%, 90%, 1);
+    --caution-400: hsla(16, 68%, 78%, 1);
+    --caution-500: hsla(16, 66%, 68%, 1);
+    --caution-600: hsla(16, 87%, 65%, 1);
+    --caution-700: hsla(16, 47%, 48%, 1);
+    --caution-800: hsla(16, 37%, 36%, 1);
+    --caution-900: hsla(16, 28%, 21%, 1);
+
+    --alert-100: hsla(341, 45%, 98%, 1);
+    --alert-200: hsla(341, 100%, 96%, 1);
+    --alert-300: hsla(341, 81%, 90%, 1);
+    --alert-400: hsla(341, 68%, 78%, 1);
+    --alert-500: hsla(341, 66%, 68%, 1);
+    --alert-600: hsla(341, 96%, 67%, 1);
+    --alert-700: hsla(341, 50%, 52%, 1);
+    --alert-800: hsla(341, 37%, 36%, 1);
+    --alert-900: hsla(341, 28%, 21%, 1);
     @apply bg-base-100 !important;
 }
 
