--- a/ui/packages/ui-components/src/index.tw.css
+++ b/ui/packages/ui-components/src/index.tw.css
@@ -70,6 +70,20 @@ button[disabled] {
     box-shadow: 0 4px 14px -2px rgba(0, 0, 0, 0.2);
 }
 
+.alert-tooltip {
+    --background-color: var(--alert-200);
+    --border-color: var(--alert-400);
+
+    background-color: var(--background-color);
+    border: 1px solid var(--border-color);
+}
+
+.alert-tooltip .detailed-overlay-header {
+    --border-color: var(--alert-400);
+
+    border-color: var(--border-color);
+}
+
 .tippy-box > .tippy-arrow:after {
     content: '';
     position: absolute;
