Upgrading react-table to version 7 (#6893)
* Replacing react-table with react-table-6

* changes

--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -574,7 +574,7 @@ h6 {
 }
 
 /* React Table overrides. Delete this file once all react Table properties are ported over properly to avoid the use of !important*/
-@import '~react-table/react-table.css';
+@import '~react-table-6/react-table.css';
 
 .ReactTable .rt-table {
     overflow: overlay !important;
