Adding background shadow for network entity overlay (#7214)

--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -1239,3 +1239,8 @@ h6 {
 .drag-grip::after {
     content: '... ... ... ... ... ... ...';
 }
+
+.network-overlay-bg-shadow {
+    box-shadow: 0 0 30px 0 rgba(81, 119, 255, 0.23);
+    background: rgba(81, 119, 255, 0.23);
+}
