Upgrade tailwindcss to 2.0.2 (#7014)
Follow the upgrade guide and make all the corresponding changes.

--- a/ui/packages/tailwind-config/index.tw.css
+++ b/ui/packages/tailwind-config/index.tw.css
@@ -1,5 +1,5 @@
-@import "./light.theme.css";
-@import "./dark.theme.css";
+@import './light.theme.css';
+@import './dark.theme.css';
 
 @tailwind base;
 @tailwind components;
