--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -50,6 +50,35 @@
 
 @import '~@stackrox/ui-components/lib/ui-components.css';
 
+/* reset the unthinking hardcoded resets of Tailwind Forms in v2 plugin,
+   https://github.com/tailwindlabs/tailwindcss-forms/blob/master/src/index.js
+   This has to be done in both ui-components CSS and apps/platform CSS,
+   otherwise, the Tailwind reset will win if it's only done in one or the other. */
+[type='text'],
+[type='email'],
+[type='url'],
+[type='password'],
+[type='number'],
+[type='date'],
+[type='datetime-local'],
+[type='month'],
+[type='search'],
+[type='tel'],
+[type='time'],
+[type='week'],
+[multiple],
+textarea,
+select {
+    font-size: 100%;
+}
+
+[type='checkbox'],
+[type='checkbox'] {
+    @apply w-3 h-3 rounded-sm;
+}
+
+/* end reset of the Tailwind forms reset */
+
 .sticky {
     position: sticky !important;
 }
@@ -119,11 +148,11 @@ h6 {
 }
 
 .pill {
-    @apply select-none bg-base-200 cursor-pointer p-2 m-2 rounded-sm whitespace-no-wrap flex-1 text-center text-xs text-base-500 font-600 !important;
+    @apply select-none bg-base-200 cursor-pointer p-2 m-2 rounded-sm whitespace-nowrap flex-1 text-center text-xs text-base-500 font-600 !important;
 }
 
 .pill-active {
-    @apply select-none cursor-pointer p-2 m-2 bg-base-300 rounded-sm whitespace-no-wrap flex-1 text-center text-xs text-base-700 font-600 !important;
+    @apply select-none cursor-pointer p-2 m-2 bg-base-300 rounded-sm whitespace-nowrap flex-1 text-center text-xs text-base-700 font-600 !important;
 }
 
 .transition {
@@ -459,7 +488,7 @@ h6 {
 }
 
 .btn-success:hover {
-    @apply btn-success bg-success-300 text-success-800 !important;
+    @apply border-success-500 bg-success-300 text-success-800 !important;
 }
 
 .btn-alert {
@@ -467,7 +496,7 @@ h6 {
 }
 
 .btn-alert:hover {
-    @apply btn-alert border-alert-700 bg-alert-700 !important;
+    @apply text-alert-100 border-alert-700 bg-alert-700 !important;
 }
 
 .btn-primary {
@@ -475,7 +504,7 @@ h6 {
 }
 
 .btn-primary:hover {
-    @apply btn-primary bg-primary-100 bg-base-200 border-primary-400 !important;
+    @apply text-primary-600 bg-primary-100 bg-base-200 border-primary-400 !important;
 }
 
 .btn-tertiary {
@@ -483,7 +512,7 @@ h6 {
 }
 
 .btn-tertiary:hover {
-    @apply btn-tertiary bg-tertiary-700 bg-base-200 border-tertiary-600 !important;
+    @apply text-tertiary-700 bg-tertiary-700 bg-base-200 border-tertiary-600 !important;
 }
 
 .btn-base {
@@ -491,7 +520,7 @@ h6 {
 }
 
 .btn-base:hover {
-    @apply btn-base bg-base-200 text-base-700 !important;
+    @apply border-base-400 bg-base-200 text-base-700 !important;
 }
 
 /* Network Graph CSS Classes */
@@ -612,7 +641,7 @@ h6 {
 
 .ReactTable input[type='checkbox']:hover,
 .ReactTable input[type='checkbox']:focus {
-    @apply .shadow;
+    @apply shadow;
 }
 
 .ReactTable .rt-thead {
@@ -676,18 +705,18 @@ h6 {
 }
 
 .ReactTable .rt-expandable {
-    @apply .flex;
+    @apply flex;
 }
 
 .ReactTable .rt-tbody .rt-tr .rt-td {
     box-shadow: 0px -1px 0 0 theme('colors.base-300'), inset 0px -1px 0 0 theme('colors.base-300');
-    @apply .whitespace-normal !important;
+    @apply whitespace-normal !important;
 }
 
 .ReactTable.expanded .rt-tbody .rt-tr .rt-td {
     box-shadow: 0px -1px 0 0 theme('colors.base-300'),
         inset 0px -1px 0 -1px theme('colors.base-300');
-    @apply .whitespace-normal !important;
+    @apply whitespace-normal !important;
 }
 
 .ReactTable .rt-tbody .rt-tr-group:hover {
@@ -699,7 +728,7 @@ h6 {
 
 .ReactTable .rt-tbody .rt-tr.row-active .rt-td,
 .ReactTable .rt-tbody .rt-tr.row-active:hover .rt-td {
-    @apply .text-tertiary-700 .bg-tertiary-200 !important;
+    @apply text-tertiary-700 bg-tertiary-200 !important;
     box-shadow: 0px -1px 0 0 theme('colors.tertiary-400'),
         inset 0px -1px 0 0 theme('colors.tertiary-400');
     z-index: 4 !important;
